--- a/mrgstyle.css
+++ b/mrgstyle.css
@@ -60,8 +60,8 @@ html {
 
 .table.cell{
 	position: relative;
-	width: 16.6vw;
-	left: -2px;
+	width: calc(102% + 4px);
+	left: -4px;
 }
 
 .backtextbox {
@@ -86,13 +86,13 @@ html {
 
 
 .title{
-	font-size: 39pt;
+	font-size: 26pt;
 	margin: auto;
   	font-weight: bold;
   	height: 62px;
 }
 .subtitle{
-	font-size: 24pt;
+	font-size: 18pt;
 	font-weight: normal;
 	margin: auto;
 }
@@ -172,10 +172,8 @@ html {
     border: none;
     text-align: start;
 	font-family: 'Poppins';
-	font-size: 12pt;
 	color:var(--darkblue);
 	margin-top: 2.5px;
-	width: 12vw;
 }
 .calcdatacontainer{
 	border: 2px solid var(--darkblue);
