--- a/mrgstyle.css
+++ b/mrgstyle.css
@@ -131,12 +131,12 @@ html {
 }
 .img-hldr-1{
 	position: absolute;
-	top:calc(min(1vw,7.6px)*18);
+	top:calc(min(1vw,7.6px)*20);
 	width: 25%;
 }
 .img-hldr-3{
 	position: absolute;
-	top:calc(min(1vw,7.6px)*4);
+	top:calc(min(1vw,7.6px)*9);
 	width: 25%;
 }
 
@@ -208,8 +208,9 @@ html {
 }
 
 .pindata{
-	float: left;
-	width: 10%;
+    float: left;
+    margin-top: 3px;
+    width: 4%;
 }
 
 .calcdatacontainer{
