--- a/mrgstyle.css
+++ b/mrgstyle.css
@@ -126,12 +126,12 @@ html {
 
 .img-hldr-2{
 	position: absolute;
-	top:calc(max(-1vw,-7.6px));
+	top:calc(min(1vw,7px)*20);
 	width: 25%;
 }
 .img-hldr-1{
 	position: absolute;
-	top:calc(min(1vw,7.6px)*20);
+	top:calc(min(1vw,7.6px)*6);
 	width: 25%;
 }
 .img-hldr-3{
@@ -210,8 +210,8 @@ html {
 }
 .calcdata.shortright{
 	margin-right: 0%;
+	width: 68%;
 	float: left;
-
 }
 
 .pindata{
