--- a/mrgstyle.css
+++ b/mrgstyle.css
@@ -2,6 +2,7 @@
   --darkblue: #063e66;
   --lightblue: #c4cfde;
   --pink: #e2cddd;
+  --mediumtextmobile:20pt;
 }
 
 html {
@@ -31,19 +32,26 @@ html {
     text-align: center;
     border: 2px solid var(--darkblue);
     border-radius: 36px;
-    height: 108px;
+    height: 138px;
     margin: 12px 0 12px 0;
+}
+.title-area.mobile{
+	height:200px;
 }
 
 .titlerow{
+    font-size: 13pt;
 	width:100%;
 	height:23.4px;
 	background-color: var(--lightblue);
 	float: left;
 }
+.titlerow.mobile{
+	height: 50px;
+	font-size: var(--mediumtextmobile);
+}
 
 .titlerow-text{
-    font-size: 13pt;
     font-weight: bold;
 	text-align: center;
     position: relative;
@@ -57,6 +65,10 @@ html {
     border: 2px solid var(--darkblue);
     border-radius: 36px;
 }
+.table.column.mobile{
+	width: calc(98%/3 - 4px);
+	margin: 0 calc(1%/3) 0 calc(1%/3);
+}
 
 .table.cell{
 	position: relative;
@@ -68,6 +80,10 @@ html {
 	height: 28.5px;
     position: relative;
     z-index: -1;
+}
+
+.backtextbox.mobile{
+	height: 50px;
 }
 
 
@@ -95,6 +111,9 @@ html {
     position: relative;
     top: 4px;
 }
+.backtext.mobile{
+	font-size:var(--mediumtextmobile);
+}
 
 
 .backtext.italic{
@@ -109,15 +128,24 @@ html {
 
 
 .title{
-	font-size: 26pt;
-	margin: auto;
+	font-size: 39pt;
+	width: 100%;
+	float: left;
   	font-weight: bold;
   	height: 62px;
 }
+.title.mobile{
+	font-size:60pt;
+}
+
 .subtitle{
 	font-size: 18pt;
 	font-weight: normal;
-	margin: auto;
+	float: left;
+	width: 100%;
+}
+.subtitle.mobile{
+	font-size: 36pt;
 }
 
 .image{
@@ -139,12 +167,19 @@ html {
 	top:calc(min(1vw,7.6px)*9);
 	width: 25%;
 }
+.img-hldr-4{
+	width: 50%;
+	float: left;
+}
 
 .middle-holder{
     width: 50%;
     margin: auto;
     float: left;
     height: 100%;
+}
+.middle-holder.mobile{
+	width:100%;
 }
 
 .quarter-holder{
@@ -155,14 +190,22 @@ html {
     display: flex;
     align-items: flex-end;
 }
+.quarter-holder.mobile{
+	display:none;
+}
 
 .calculator {
     display: flex;
+    float: left;
+    width: 100%;
 }
 
 .calculator-container{
 	text-align: center;
-	height: 351px;
+	height: 381px;
+}
+.calculator-container.mobile{
+	height: 600px;
 }
 
 .contact{
@@ -182,13 +225,13 @@ html {
 
 .rightside{
 	float: left;
-	width:35vw;
+	width:70%;
 	flex-grow: 1;
 }
 
 .leftside{
 	float: left;
-	width:15vw;
+	width:30%;
 	flex-grow: 1;
 }
 
@@ -202,6 +245,11 @@ html {
 	width:80%;
 	margin-left: 10%;
 	margin-right: 10%;
+	font-size: 10pt;
+}
+
+.calcdata.mobile{
+	font-size: var(--mediumtextmobile);
 }
 
 .calcdata.shortleft{
@@ -223,6 +271,31 @@ html {
 .calcdatacontainer{
 	border: 2px solid var(--darkblue);
 	border-radius: 36px;
-	width: 13vw;
+	width: 100%;
 	height: 24.5px;
+	font-size: 10pt;
+}
+.calcdatacontainer.mobile{
+	font-size: var(--mediumtextmobile);
+	height: 46px;
+}
+
+
+.mobileonly{
+	display: none;
+}
+.mobileonly.mobile{
+	display:flex;
+	flex-direction: column;
+}
+.mobile-contact-holder{
+	margin:auto;
+	width: 100%;
+}
+.contact.mobile{
+	font-size: 20pt;
+}
+.image-centerer{
+	width: 70%;
+	margin: 0 15% 0 15%;
 }
