--- a/mrgstyle.css
+++ b/mrgstyle.css
@@ -107,6 +107,12 @@ html {
 	width: calc(100%/6);
 	float: left;
 }
+.backtextbox.fivesixths.mobile{
+	width: calc(200%/3);
+}
+.backtextbox.onesixth.mobile{
+	width: calc(100%/3);
+}
 
 .backtext{
     font-weight: bold;
